# scandalbot

./: .gitignore  Cargo.toml
src/: main.rs
templates/: base.html.tera  comparison.html.tera  index.html.tera
