[package]
name = "scandalbot"
version = "0.1.0"
authors = ["nathankrischer <me@nathankrischer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rust-lzma = "0.5"
base64 = "0.13.0"
json-url = { path = "../json-url"}

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "tera_templates", "serve"]